# gen-templates

./: README.md  cargo-generate.toml
.github/workflows/: build.yaml
cloudevents/: Cargo.toml  Dockerfile  README.md  ci.Dockerfile
cloudevents/src/: main.rs
http/: Cargo.toml  Dockerfile  README.md  ci.Dockerfile  service.yaml
mysql/: Cargo.toml  Dockerfile  README.md
mysql/migrations/: 20230206215743_create_orders_table.sql
mysql/scripts/: init_db.sh
mysql/src/: handler.rs  main.rs
mysql/src/domain/: mod.rs  order.rs  shipping_address.rs
