[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cloudevents-sdk = { git = "https://github.com/No9/sdk-rust", rev = "5a3697c", features = ["http-binding", "hyper_wasi", "hyper" ] } 
hyper_wasi = { version = "0.15", features = ["full"] }
log = "0.4.17"
tokio_wasi = { version = "1", features = ["io-util", "fs", "net", "time", "rt", "macros"] }
serde_json = " 1.0.91"

[dev-dependencies]
bytes = "1.3.0"
http-body-util = "0.1.0-rc.2"
chrono = "*"
