[package]
name = "projmysql"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "projmysql"

[dependencies]
anyhow = "1.0"
hyper_wasi = { version = "0.15", features = ["full"] }
tokio_wasi = { version = "1", features = ["io-util", "fs", "net", "time", "rt", "macros"] }
log = "0.4.17"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.3"
mysql_async_wasi = "0.30"
unicode-segmentation = "1.7.1"

[dev-dependencies]
http-body-util = "0.1.0-rc.2"
bytes = "1.3.0"
claim = { git = "https://github.com/No9/rust-claim", rev="739d12b3d55c05ceb9a2b78cf0ca4ccb7455abdb" }